# debi_competetion

./: README.md  readme.txt
ball_detection/: CMakeLists.txt  package.xml
ball_detection/src/: ball_detection_node.cpp
ball_detection_msgs/: CMakeLists.txt  package.xml
ball_exclusion_layer/: CMakeLists.txt  package.xml
ball_exclusion_layer/src/: ball_exclusion_layer.cpp
debi_ws/src/dev_pkg/: CMakeLists.txt  package.xml
debi_ws/src/dev_pkg/src/: get_ball_pose.cpp  go_to_ball.cpp
debi_ws/src/gazebo worlds/playground/: model.sdf
moveit_cpp_api/: joint_move.h  points.h
turtlebot3/turtlebot3_navigation/param/: costmap_common_params_waffle_pi.yaml
